AccessKeys, refactorización de modelos a carpeta model
