# Backend/internal/users/router.go
@@ -2,7 +2,6 @@ package users
 
 import (
 	"database/sql"
-	"net/http"
 
 	errorhandler "github.com/crcaniullan-commits/Tally/internal/error"
 	"github.com/crcaniullan-commits/Tally/internal/util"
@@ -10,11 +9,7 @@ import (
 	"go.uber.org/zap"
 )
 
-type MiddlewareAuth interface {
-	CheckOwnership(util.UserRole, http.HandlerFunc) http.HandlerFunc
-}
-
-func InitModule(r chi.Router, db *sql.DB, logger *zap.SugaredLogger, middl MiddlewareAuth) {
+func InitModule(r chi.Router, db *sql.DB, logger *zap.SugaredLogger, middl util.MiddlewareAuth) {
 	err := errorhandler.NewErrorResponse(logger)
 
 	repo := NewStorage(db)
@@ -24,6 +19,7 @@ func InitModule(r chi.Router, db *sql.DB, logger *zap.SugaredLogger, middl Middl
 	r.Route("/users", func(r chi.Router) {
 		r.Patch("/", middl.CheckOwnership(util.UserRoleUsuario, hdl.Update))
 		r.Delete("/", middl.CheckOwnership(util.UserRoleUsuario, hdl.Delete))
+		r.Post("/exchange/{code}", middl.CheckOwnership(util.UserRoleUsuario, hdl.Exchange))
 		r.Get("/municipal/{rut}", middl.CheckOwnership(util.UserRoleMunicipal, hdl.GetByRut))
 	})
 }
